// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v1 fixDuplicates 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


\\"@scope/lib@>=1.0.0\\", \\"@scope/lib@>=2.0.0\\":
  version \\"4.17.15\\"
  resolved \\"https://example.net/@scope/lib@^4.7.15\\"

library@>=1.0.0, library@>=1.1.0:
  version \\"3.0.0\\"
  resolved \\"https://example.net/library@^3.0.0\\"

library@^2.0.0:
  version \\"2.1.0\\"
  resolved \\"https://example.net/library@^2.1.0\\"

lodash@>=1.0.0, lodash@>=2.0.0:
  version \\"4.17.15\\"
  resolved \\"https://registry.yarnpkg.com/lodash/-/lodash-4.17.15.tgz#b447f6670a0455bbfeedd11392eff330ea097548\\"
"
`;

exports[`v1 listDuplicates 1`] = `
Array [
  "Package \\"@scope/lib\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;

exports[`v2 fixDuplicates 1`] = `
"__metadata:
  version: 4

\\"library@npm:>=1.0.0, library@npm:>=1.1.0\\":
  version: 3.0.0
  resolution: \\"library@npm:3.0.0\\"
  checksum: 2/6fc98369f954229cbb6e4ce1a27a4202a17b4ad67b8def64322e9351414eef405b8783ecbe1b8f0334e52935ae8c43cd3bcc8abd78500227d491516a9a9d96aa
  languageName: node
  linkType: hard

\\"library@npm:^2.0.0\\":
  version: 2.1.0
  resolution: \\"library@npm:2.1.0\\"
  checksum: 2/6fc98369f954229cbb6e4ce1a27a4202a17b4ad67b8def64322e9351414eef405b8783ecbe1b8f0334e52935ae8c43cd3bcc8abd78500227d491516a9a9d96aa
  languageName: node
  linkType: hard

\\"lodash@npm:>=1.0.0, lodash@npm:>=2.0.0\\":
  version: 4.17.15
  resolution: \\"lodash@npm:4.17.15\\"
  checksum: 2/4742f458f496d3d2d27710118022aaa4b047e4d6d340bd61400a4d604e98780a43670abea736c614cdb94f9132b1a52791965f2071a78d4e5ea321ccaf7df5e5
  languageName: node
  linkType: hard

\\"yarn-berry@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"yarn-berry@workspace:.\\"
  dependencies:
    library: ^2.0.0
    lodash: \\">=2.0.0\\"
  languageName: unknown
  linkType: soft
"
`;

exports[`v2 listDuplicates 1`] = `
Array [
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;
